--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,8 @@ flutter:
     - assets/zakatrecievable.png
     - assets/zakatnisab.png
     - assets/zakatliability.png
+    - assets/tasbeehicon.png
+    - assets/zikrcard.png
 
 
 
